--- a/post.yml
+++ b/post.yml
@@ -1,13 +1,13 @@
 ---
 - title: My First Entry
-  image: images/cyclopticcover.jpg
+  image: images/TriclopticPanda.jpg
   body: | 
     Meatball brisket doner ut. Short loin prosciutto aliqua laboris pariatur, 
     t-bone ut aute bacon velit tri-tip lorem. Dolore sausage laboris filet mignon 
     incididunt shoulder jerky ullamco proident. Sint aliquip nostrud occaecat pig cillum tempor kielbasa meatloaf.
 
 - title: My Second Entry
-  image: images/TriclopticPanda.jpg
+  image: images/dog.jpg
   body: | 
     Pariatur do consequat, aliquip enim exercitation shankle brisket jerky pork belly sed swine ribeye tenderloin. 
     Voluptate pork chop venison in filet mignon salami cupidatat nostrud flank. Tongue in quis short ribs, 
